data/derived/sp14/progs/unify/prog0797.ml.out
Characters 207-208:
  | Average (ex1,ex2) -> (eval (ex1,x,y) +. eval (ex2,x,y)) /. 2
                                                               ^
Error: This expression has type int but an expression was expected of type
         float
